<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/penny"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/dm"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                </RadioGroup>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/vesper"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/hello_fresh"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                </RadioGroup>

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/betrag"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payer"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"
                    android:minHeight="72dp"
                    android:text="@string/domi"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"
                    android:minHeight="72dp"
                    android:text="@string/franzi"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="120dp"
                    android:minHeight="72dp"
                    android:text="@string/leon"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/domi"
                    android:padding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/franzi"
                    android:padding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leon"
                    android:padding="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </LinearLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="160dp"
                android:padding="8dp"
                android:text="Jaaa!! Auf geht's! Geil!!!"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
